--- a/root/css/styles.css
+++ b/root/css/styles.css
@@ -30,6 +30,26 @@ code {
     color: white !important;
 }
 
+.icons {
+    padding-top: 15px;
+    display: flex;
+    justify-content: center;
+    text-shadow: 2px 3px 3px #006;
+    font-size: 30px;
+}
+
+.icons i {
+    margin-left: 17px;
+    margin-right: 5px;
+    color: rgb(243, 233, 210);
+    font-size: 35px;
+}
+
+.icons a {
+    text-decoration: none;
+    color: rgb(243, 233, 210);
+}
+
 .intro-code {
     width: 30%;
     margin: auto;
@@ -41,8 +61,9 @@ code {
     color: rgb(243, 233, 210);
     font-size: 100px;
     text-shadow: 6px 3px 3px #006;
-    text-align: center;
+    margin: auto;
     padding-top: 30px;
+    text-align: center;
 }
 
 .typed-cursor {
@@ -54,12 +75,14 @@ code {
 
     .page {
         text-align: center;
-        padding-top: 30px;
-        padding-left: 30px;
-        padding-right: 30px;
+        padding: 30px 30px 0 30px;
     }
 
     .intro-code {
         width: 400px;
+    }
+
+    .name {
+        text-align: center;
     }
 }
