--- a/root/css/styles.css
+++ b/root/css/styles.css
@@ -73,6 +73,10 @@ code {
 
 @media only screen and (max-width: 650px) {
 
+    hr {
+        width: 90%;
+    }
+
     .page {
         text-align: center;
         padding: 30px 30px 0 30px;
@@ -84,5 +88,10 @@ code {
 
     .name {
         text-align: center;
+    }
+
+    .icons {
+        display: flex;
+        flex-wrap: wrap;
     }
 }
