--- a/root/css/styles.css
+++ b/root/css/styles.css
@@ -8,6 +8,7 @@
 body {
     background-color: #4BB;
     font-family: 'Roboto Mono', monospace;
+    color: rgb(243, 233, 210);
 }
 
 hr {
@@ -27,6 +28,7 @@ hr {
 }
 
 code {
+    white-space: normal;
     color: white !important;
 }
 
@@ -71,13 +73,36 @@ code {
     font-size: 20px;
 }
 
+.construction {
+    text-align: center;
+    font-size: 50px;
+}
+
+/* Code Styling */
+
+.variable_type {
+    color: rgb(46, 95, 255);
+}
+
+.string {
+    color: rgb(255, 158, 40);
+}
+
+.variable_name {
+    color: deepskyblue;
+}
+
+.comment {
+    color: green;
+}
+
 @media only screen and (max-width: 650px) {
 
     hr {
         width: 90%;
     }
 
-    .page {
+    .header {
         text-align: center;
         padding: 30px 30px 0 30px;
     }
