--- a/root/css/styles.css
+++ b/root/css/styles.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300;200&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300;400&display=swap');
 
 * {
     margin: 0;
@@ -6,9 +6,12 @@
 }
 
 body {
-    background-color: #4BB;
+    background-color: rgb(32, 32, 32);
+    /*#4BB;*/
     font-family: 'Roboto Mono', monospace;
     color: rgb(243, 233, 210);
+    margin: 0;
+    padding-bottom: 200px;
 }
 
 hr {
@@ -19,10 +22,16 @@ hr {
     box-shadow: 6px 3px 3px #006;
 }
 
+#animation {
+    position: fixed;
+    z-index: -1;
+}
+
 .content {
-    margin: auto;
     width: 65%;
     max-width: 1000px;
+    position: relative;
+    margin: auto;
 }
 
 a {
@@ -137,4 +146,41 @@ code {
     .projects {
         width: 90%;
     }
+}
+
+::-webkit-scrollbar {
+    width: 10px;
+    height: 10px;
+    background-color: rgb(243, 233, 210);
+    border-radius: 100px;
+    -webkit-border-radius: 100px;
+}
+
+::-webkit-scrollbar:hover {
+    background-color: rgb(180, 173, 158);
+}
+
+/* The scrollbar 'thumb' ...that marque oval shape in a scrollbar */
+::-webkit-scrollbar-thumb:vertical {
+    background: rgba(0, 0, 0, 0.5);
+    border-radius: 100px;
+    -webkit-border-radius: 100px;
+}
+
+::-webkit-scrollbar-thumb:vertical:active {
+    background: rgba(0, 0, 0, 0.61);
+    border-radius: 100px;
+    -webkit-border-radius: 100px;
+}
+
+::-webkit-scrollbar-thumb:horizontal {
+    background: rgba(0, 0, 0, 0.5);
+    border-radius: 100px;
+    -webkit-border-radius: 100px;
+}
+
+::-webkit-scrollbar-thumb:horizontal:active {
+    background: rgba(0, 0, 0, 0.61);
+    border-radius: 100px;
+    -webkit-border-radius: 100px;
 }
