--- a/root/css/styles.css
+++ b/root/css/styles.css
@@ -12,7 +12,8 @@ body {
     color: rgb(243, 233, 210);
     margin: 0;
     -ms-overflow-style: none;
-    scrollbar-width: none
+    scrollbar-width: none;
+    margin-bottom: 20px;
 }
 
 body::-webkit-scrollbar {
