added experiences section

--- a/root/css/styles.css
+++ b/root/css/styles.css
@@ -145,6 +145,10 @@ code {
     position: relative;
 }
 
+#experience ul {
+    margin-left: 15px;
+}
+
 @media only screen and (max-width: 650px) {
 
     .content {
